--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
 
             <div class="bottom-footer">
-                <h6>Designed by <a href="#">DotZipp</a></h6>
+                <h6>Builtd by Our <a href="#">Metizen Developer</a></h6>
             </div>
         </footer>
     </div>
